Stable-Diffusion-UI-Agones/ingress-iap/ingress_yx.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-agones-ingress
  annotations:
    # 手动的话，这里需要修改，找到静态ip的名称,gcp搜索ip addresses---yx----
    kubernetes.io/ingress.global-static-ip-name: sd-webui-ingress-c8c84f4c
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: stable-diffusion-nginx-service # Name of the Service targeted by the Ingress
      port:
        number: 8080 # Should match the port used by the Service
